build_20091020_2200 reutelshoefer/lemmerich
	* some things remained the same...

build_20090721_1245 reutelshoefer
	* changes due to KnowWE refactoring

build_20090706_1520 reutelshoefer
	* created first simple 'sparql-handler'

build_20090706_1320 reutelshoefer
	* changes according to refactorings of KnowWE-core

build_20090608_1030 reutelshoefer
	* some restructuring of packages
	* some changes of rendering of TimeEvents

build_20090529_1620 lemmerich, reutelshoefer, haupt
	* added "getOwl" method in TimeEventType
	* added Start/End Annotation as subtypes of TimeEventType

build_20090526_1100 reutelshoefer
	* translating data into owl repository
	* TimeEvent is rendered as collapsebox
	* renamed references on UpperOntology2 to UpperOntology

build_20090521_1145 lemmerich, reutelshoefer
	* initial commit as "real" KnowWE2-Plugin